--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <tr>
             <td height="89"><img src="./assets/images/logo.png"></td>
             <td align="right">
-                <a href="./index.html">Home</a> |
+                <a href="">Home</a> |
                 <a href="./quem-somos.html">Quem somos</a> |
                 <a href="./contato.html">Contato</a>
             </td>
